# BackgroundGenerator

./: .gitignore  README.md
client/: .gitignore  index.html  package-lock.json  package.json
client/src/: App.svelte  app.html  routes.ts  stores.ts
client/src/components/: About.svelte  Generator.svelte  (+6 more)
server/: Cargo.toml  Rocket.toml
server/.cargo/: config.toml
server/background_generator/: Cargo.toml
server/background_generator/src/: chains_generator.rs  circles_generator.rs  colorful_image_generator.rs  lib.rs  main.rs  triangle_generator.rs  triangles_generator.rs
server/src/: admin_auth.rs  auth.rs  cors.rs  email_validator.rs  generator_routes.rs  main.rs  models.rs  password_helper.rs  pools.rs  responders.rs  routes.rs  sessions.rs  user_helper.rs  viewmodels.rs
server/src/models/: chains_generator_settings.rs  circles_generator_settings.rs  generator_description.rs  generator_type.rs  sea_orm_active_enums.rs  settings.rs  triangles_generator_settings.rs  user.rs  user_settings.rs
server/src/routes/: admin.rs  authentication.rs  generators.rs  user.rs
server/src/routes/generators/: chains_generator.rs  circles_generator.rs  triangles_generator.rs
server/src/viewmodels/: generator_description.rs  generator_description_update.rs  generator_settings.rs  generator_type.rs  register_data.rs  triangle_generator_settings.rs  user_data.rs  viewable_user_data.rs
server/src/viewmodels/user_data/: basic_user_data.rs  detailed_user_data.rs  email_change.rs  login.rs  my_generators.rs  password_change.rs  register.rs  update_password.rs  update_user.rs
(+36 files in other folders)
