[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "background_generator"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
sea-orm = { version = "0.10.7", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-rocket = "0.5.2"
rand = "0.8.5"
background_generator = { path = "background_generator" }
image = "0.24.5"
regex = "1"

[profile.dev.package."*"]
opt-level = 2