[package]
name = "background_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
rand = "0.8.5"
itertools = "0.10.5"
bracket-color = "0.8.7"
rand_chacha = "0.3.1"